<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal"
                android:maxLength="5"/>

            <!-- Quantity display and buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/quantity_minus_button"
                    android:layout_width="@dimen/quantity_button_size"
                    android:layout_height="@dimen/quantity_button_size"
                    android:text="@string/quantity_minus_button" />

                <EditText
                    android:id="@+id/quantity_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:layout_marginLeft="@dimen/margin_8dp"
                    android:layout_marginRight="@dimen/margin_8dp"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:hint="@string/hint_quantity"
                    android:text="@string/default_quantity"
                    android:inputType="number"
                    android:maxLength="3"/>

                <Button
                    android:id="@+id/quantity_plus_button"
                    android:layout_width="@dimen/quantity_button_size"
                    android:layout_height="@dimen/quantity_button_size"
                    android:text="@string/quantity_plus_button" />


            </LinearLayout>

            <!-- Supplier name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

            <!-- Supplier phone number field -->
            <EditText
                android:id="@+id/edit_supplier_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_supplier_phone_number"
                android:inputType="phone"
                android:maxLength="22"/>

            <Button
                android:id="@+id/call_supplier"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/call_supplier_button"
                android:text="@string/call_supplier"

                />

        </LinearLayout>
    </LinearLayout>
